Fixed extra space under footer.

--- a/_sass/_additional.scss
+++ b/_sass/_additional.scss
@@ -15,7 +15,7 @@ body
 }
 
 // Sticky footer
-$footer-height: 20px;
+$footer-height: 30px;
 html {
   position: relative;
   min-height: 100%;
